Corrected the Hero height on smaller screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,7 +535,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 768px) {
   #hero {
-    height: 100vh;
+    height: 70vh;
   }
   #hero h1 {
     font-size: 28px;
@@ -553,7 +553,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-height: 500px) {
   #hero {
-    height: 120vh;
+    height: 50vh;
   }
 }
 
